// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`packem package.json bin > should patch binary directive > cjs output 1`] = `
"#!/usr/bin/env node
//#region src/bin/index.ts
console.log("Hello, world!");
//#endregion
"
`;

exports[`packem package.json bin > should work with bin as .cts extension > cjs output 1`] = `
"#!/usr/bin/env node
//#region src/bin/index.cts
const path = require("path");
console.log(path.basename(__filename));
//#endregion
"
`;

exports[`packem package.json bin > should work with bin as .mts extension > mjs output 1`] = `
"#!/usr/bin/env node
//#region src/bin/index.mts
console.log("Hello, world!");
//#endregion
"
`;

exports[`packem package.json bin > should work with bin as multi path > cjs output 1`] = `
"#!/usr/bin/env node
//#region src/bin/a.ts
console.log("a");
//#endregion
"
`;

exports[`packem package.json bin > should work with bin as multi path > cjs output 2`] = `
"#!/usr/bin/env node
//#region src/bin/b.ts
console.log("b");
//#endregion
"
`;
